--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 
     <footer>
       <p>Vibhav Kashyap - vk2581</p>
+      <p>Project can be accessed at - https://github.com/vibhavk03/computer-vision-coms4732-hw1</p>
     </footer>
   </body>
 </html>
